--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#home">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#livros">Livros</a>
@@ -42,9 +42,9 @@
         </div>
       </div>
 
-      <div class="card-group">
+      <div class="card-group" id="#home">
         <div class="col-1 col-sm-6 col-md-4">
-          <img src="imgs/capa biblioteca digital.png" class="card-img-top" alt="...">
+          <img src="imgs/capa biblioteca digital.png" class="card-img-top" alt="..."  style="width: 100%; height: 300px;">
           <div class="card-body">
             <h5 class="card-title">📚 +300 livros</h5>
             <p class="card-text">Um acervo completo com mais de 300 títulos de diversos gêneros, autores e temas — sempre atualizado pra você.</p>
@@ -52,7 +52,7 @@
           </div>
         </div>
         <div class="col-1 col-sm-6 col-md-4">
-          <img src="imgs/bib_virtual.jpg" class="card-img-top" alt="...">
+          <img src="imgs/bib_virtual.jpg" class="card-img-top" alt="..." style="width: 100%; height: 300px;">
           <div class="card-body">
             <h5 class="card-title">🚀 Acesso Rápido</h5>
             <p class="card-text">Navegue com facilidade e encontre seus livros favoritos em poucos cliques, com visual moderno e intuitivo.</p>
@@ -60,7 +60,7 @@
           </div>
         </div>
         <div class="col-1 col-sm-6 col-md-4">
-          <img src="imgs/biblioteca-online.jpg" class="card-img-top" alt="...">
+          <img src="imgs/biblioteca-online.jpg" class="card-img-top" alt="..."  style="width: 100%; height: 300px;">
           <div class="card-body">
             <h5 class="card-title">💬 Contato Direto</h5>
             Precisa de ajuda ou quer sugerir um livro? Fale com a gente de forma rápida e simples pelo nosso formulário de contato.            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
