--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a class="nav-link" href="#contato">Contato</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true" href="#sobre">Sobre</a>
+                <a class="nav-link" href="#duvidas">Dúvidas</a>
               </li>
             </ul>
           </div>
@@ -39,11 +39,12 @@
 
 
       <div class="card">
-        <div class="card-body mx-auto">
+        <div class="card-body text-center">
             Bem-vindo à Biblioteca Viva! Explore um mundo de conhecimento com apenas um clique.
         </div>
       </div>
-
+<div class="container mt-5 mb-5">
+  <div class="row">
         <div class="row d-flex aling-items-stretch">
         <div class="col-1 col-sm-6 col-md-4">
           <img src="imgs/capa biblioteca digital.png" class="card-img-top" alt="..."  style="width: 100%; height: 300px;">
@@ -68,6 +69,7 @@
         </div>
       </div>   
   </div>
+</div>
 
   <div class="mt-5 text-center" id="livros">
     <h2 class="display-5 fw-bold"><img src="imgs/pilha-de-livros 2.png" alt="" width="50" height="54" > Livros em Destaque</h2>
@@ -454,6 +456,118 @@
       </div>
     </div>
   </div>
+
+  <div class="mt-5 text-center" id="contato">
+    <h2 class="display-5 fw-bold"><img src="imgs/bater-papo.png" alt=""  style="height: 45px; width: 50px; gap: 10px;" >Contato</h2>
+    <p>
+      Tem dúvidas ou sugestões? Preencha o formulário abaixo e nossa equipe responderá em breve!</p>
+  </div>
+
+
+
+  <form action="#">
+  <div class="row" style="justify-content: center;">
+  <div class="card col-sm-6 col-md-4">
+    <div class="mt-3 mb-3">
+      <label for="exampleFormControlInput1" class="form-label">Nome completo</label>
+      <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nome completo...">
+    </div>
+    <div class="mb-3">
+      <label for="exampleFormControlInput1" class="form-label">Email</label>
+      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+    </div>
+    <div class="mb-3">
+      <label for="exampleFormControlTextarea1" class="form-label">Mensagem</label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div> 
+    <div class="d-flex" style="justify-content: center;">
+    <button type="submit" class="btn btn-primary"  style=" width: 200px; height: 45px;"  >Enviar</button> 
+  </div> 
+  </div>
+  </div>
+</form>
+
+<section class="bg-body-tertiary">
+<div class="mt-5 text-center" id="duvidas">
+  <h2 class="display-5 fw-bold"><img src="imgs/questao.png" alt=""  style="height: 45px; width: 50px; gap: 10px;" >Principais dúvidas</h2>
+  <p>
+    Confira abaixo as perguntas mais comuns sobre nossa biblioteca digital e veja se a sua já foi respondida!</p>
+</div>
+<div class="row g-4">
+  <div class="col-md-6">
+    <div class="accordion accordion-flush bg-body-tertiary" id="accordionFlushLeft">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingOneL">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOneL" aria-expanded="false" aria-controls="flush-collapseOneL">
+           Preciso de uma conta para usar a biblioteca?
+          </button>
+        </h2>
+        <div id="flush-collapseOneL" class="accordion-collapse collapse" data-bs-parent="#accordionFlushLeft" aria-labelledby="flush-headingOneL">
+          <div class="accordion-body">Não, a biblioteca está disponível para todos. Não é necessário criar uma conta para acessar os livros, mas, ao criar uma conta, você poderá salvar seus livros favoritos e fazer recomendações.</div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingTwoL">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwoL" aria-expanded="false" aria-controls="flush-collapseTwoL">
+            Como faço para recomendar um livro?
+          </button>
+        </h2>
+        <div id="flush-collapseTwoL" class="accordion-collapse collapse" data-bs-parent="#accordionFlushLeft" aria-labelledby="flush-headingTwoL">
+          <div class="accordion-body"> Se você deseja sugerir um livro, pode entrar em contato conosco através da seção "Contato". Adoraríamos receber suas recomendações para enriquecer nosso acervo!</div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingThreeL">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThreeL" aria-expanded="false" aria-controls="flush-collapseThreeL">
+            Os livros são gratuitos?
+          </button>
+        </h2>
+        <div id="flush-collapseThreeL" class="accordion-collapse collapse" data-bs-parent="#accordionFlushLeft" aria-labelledby="flush-headingThreeL">
+          <div class="accordion-body"> Sim, todos os livros disponíveis em nossa biblioteca são de acesso gratuito. Aproveite e explore nosso acervo sem custos!</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="accordion accordion-flush bg-body-tertiary" id="accordionFlushRight">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingOneR">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOneR" aria-expanded="false" aria-controls="flush-collapseOneR">
+            Meus dados estão protegidos?
+          </button>
+        </h2>
+        <div id="flush-collapseOneR" class="accordion-collapse collapse" data-bs-parent="#accordionFlushRight" aria-labelledby="flush-headingOneR">
+          <div class="accordion-body">Sim, nós respeitamos a sua privacidade e não compartilhamos suas informações com terceiros.
+
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingTwoR">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwoR" aria-expanded="false" aria-controls="flush-collapseTwoR">
+            Posso baixar os livros ou só ler online?
+          </button>
+        </h2>
+        <div id="flush-collapseTwoR" class="accordion-collapse collapse" data-bs-parent="#accordionFlushRight" aria-labelledby="flush-headingTwoR">
+          <div class="accordion-body">A maioria dos livros está disponível para leitura online, mas alguns títulos podem ser baixados em PDF</div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingThreeR">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThreeR" aria-expanded="false" aria-controls="flush-collapseThreeR">
+            Como encontro um livro específico?
+          </button>
+        </h2>
+        <div id="flush-collapseThreeR" class="accordion-collapse collapse" data-bs-parent="#accordionFlushRight" aria-labelledby="flush-headingThreeR">
+          <div class="accordion-body">Use a barra de busca no topo da página ou navegue por categoria para encontrar o que procura.</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+</section>
+
 
   <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
