--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="#duvidas">Dúvidas</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="componentes/index.html">Componentes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Tailwind/Tailwind.html">Tailwind</a>
+              </li>
             </ul>
           </div>
         </div>
